--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         }
         h1 {
             text-align: center;
-            color: #333;
+            color: #fff;
             padding: 20px;
             font-size: 2em;
             background-color: #6d8eae;
-            color: #fff;
             margin: 0;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
@@ -134,8 +133,88 @@
             </div>
         </div>
 
-        <!-- Agrega las otras recetas siguiendo este formato -->
-        <!-- Curry de Pollo con Arroz Basmati, Sopa de Ajo, Tiramisú Clásico -->
+        <!-- Receta 3: Curry de Pollo con Arroz Basmati -->
+        <div class="receta">
+            <h2>Curry de Pollo con Arroz Basmati</h2>
+            <div class="ingredientes">
+                <h3>Ingredientes:</h3>
+                <ul>
+                    <li>500 g de pechuga de pollo</li>
+                    <li>1 cebolla grande</li>
+                    <li>2 dientes de ajo</li>
+                    <li>1 trozo de jengibre fresco (2 cm)</li>
+                    <li>2 cucharadas de curry en polvo</li>
+                    <li>400 ml de leche de coco</li>
+                    <li>300 g de arroz basmati</li>
+                    <li>Aceite vegetal</li>
+                    <li>Sal y pimienta</li>
+                </ul>
+            </div>
+            <div class="preparacion">
+                <h3>Preparación:</h3>
+                <ol>
+                    <li>Pica finamente la cebolla, el ajo y el jengibre. Corta el pollo en cubos.</li>
+                    <li>Sofríe el pollo en aceite hasta dorar. Retira y reserva.</li>
+                    <li>Cocina cebolla, ajo y jengibre en la misma sartén, luego añade el curry y la leche de coco.</li>
+                    <li>Cocina el arroz basmati según las instrucciones del paquete.</li>
+                    <li>Agrega el pollo al curry y cocina 10 minutos más. Sirve con arroz.</li>
+                </ol>
+            </div>
+        </div>
+
+        <!-- Receta 4: Sopa de Ajo -->
+        <div class="receta">
+            <h2>Sopa de Ajo</h2>
+            <div class="ingredientes">
+                <h3>Ingredientes:</h3>
+                <ul>
+                    <li>8 dientes de ajo</li>
+                    <li>150 g de pan duro</li>
+                    <li>1 litro de caldo de pollo</li>
+                    <li>4 huevos</li>
+                    <li>100 g de jamón serrano en taquitos</li>
+                    <li>1 cucharada de pimentón dulce</li>
+                    <li>Aceite de oliva</li>
+                    <li>Sal y pimienta</li>
+                </ul>
+            </div>
+            <div class="preparacion">
+                <h3>Preparación:</h3>
+                <ol>
+                    <li>Dora el ajo en aceite. Añade pimentón y pan, sofríe.</li>
+                    <li>Vierte el caldo caliente y cocina 15 minutos.</li>
+                    <li>Añade jamón y rompe los huevos en la sopa para que se cocinen.</li>
+                    <li>Sirve caliente con pimienta y un chorrito de aceite de oliva.</li>
+                </ol>
+            </div>
+        </div>
+
+        <!-- Receta 5: Tiramisú Clásico -->
+        <div class="receta">
+            <h2>Tiramisú Clásico</h2>
+            <div class="ingredientes">
+                <h3>Ingredientes:</h3>
+                <ul>
+                    <li>500 g de queso mascarpone</li>
+                    <li>4 huevos</li>
+                    <li>100 g de azúcar</li>
+                    <li>200 g de bizcochos de soletilla</li>
+                    <li>1 taza de café fuerte</li>
+                    <li>50 ml de licor Amaretto</li>
+                    <li>Cacao en polvo</li>
+                </ul>
+            </div>
+            <div class="preparacion">
+                <h3>Preparación:</h3>
+                <ol>
+                    <li>Bate las yemas con azúcar y añade mascarpone.</li>
+                    <li>Monta las claras y mezcla con la crema de mascarpone.</li>
+                    <li>Moja los bizcochos en café con Amaretto y colócalos en un molde.</li>
+                    <li>Cubre con crema de mascarpone y repite las capas.</li>
+                    <li>Refrigera 4 horas. Antes de servir, espolvorea con cacao.</li>
+                </ol>
+            </div>
+        </div>
 
     </div>
 
